--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <header>
-  <h1>SPACE MISSION CONTROL</h1>
+  <h1>INTERNATIONAL SPACE STATION TRACKER</h1>
   <span>ISS • Real-Time Orbital Telemetry</span>
 </header>
 
